--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <title>Aragon Computer Lab</title>
 </head>
 <body>
-    <h1>Welcome</h1>
+    <div class="jumbotron">
+        <h1>Welcome to Aragon Computer Lab</h1>
+        <p>hi</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      </div>
 </body>
 </html>
