add container div to jt

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 </head>
 <body>
     <div class="jumbotron">
+        <div class="container">
+
         <h1>Welcome to Aragon Computer Lab</h1>
         <p>hi</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
+    </div>
+
 </body>
 </html>
