--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         </div>
       </nav>
 
+      <div class="container">
+
+
+      <div class="card" style="width: 35rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
 
 </body>
 </html>
