--- a/schedule.html
+++ b/schedule.html
@@ -15,6 +15,10 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script
+      type="text/javascript"
+      src="https://assets.calendly.com/assets/external/widget.js"
+    ></script>
     <title>Aragon Computer Lab</title>
   </head>
   <body>
@@ -35,13 +39,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="schedule.html">Schedule a Session</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="schedule.html"
+                >Schedule a Session</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link disabled">Coming Soon</a>
@@ -51,41 +60,10 @@
       </div>
     </nav>
 
-    <div class="row row-cols-1 row-cols-md-3 g-5 p-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/home.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Computer Literacy</h5>
-            <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/scratch-og.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Scratch</h5>
-            <p class="card-text">This is a short card.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/python.jpeg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Python</h5>
-            <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div
+      class="calendly-inline-widget"
+      data-url="https://calendly.com/aragon-computer-lab/coding-instruction"
+      style="min-width: 300px; height: 700px"
+    ></div>
   </body>
 </html>
