--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css">
     <title>Aragon Computer Lab</title>
   </head>
   <body>
@@ -50,44 +51,55 @@
         </div>
       </div>
     </nav>
-    
-    <div class="container m-4">
-    <div class="row row-cols-1 row-cols-md-3 g-2">
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/home.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Computer Literacy</h5>
-            <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/scratch-og.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Scratch</h5>
-            <p class="card-text">This is a short card.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/python.jpeg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Python</h5>
-            <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content.
-            </p>
-          </div>
-        </div>
+    <div class="container p-4">
+    <div class="card w-50">
+      <img src="images/me.jpeg" style="width: 300px""" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Hello</h5>
+        <p class="card-text">
+          Hello, my name is Tyler Maxwell. I am the new computer guy(person, assistant...I am not sure what's correct). You can call me Tyler or Mr. M. I would love to start coding classes for our students as soon as possible.
+        </p>
       </div>
     </div>
+  </div>
+
+  
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-3 g-5 p-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/home.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Computer Literacy</h5>
+              <p class="card-text">
+                Basic computer operations. Historical and scientific exploration of computer hardware and software.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/scratch-og.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Scratch</h5>
+              <p class="card-text">
+                <a href="">Scratch</a> is a web-based programming environment developed at MIT. The target audience is 8 to 16 year olds.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/python.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Python</h5>
+              <p class="card-text">
+                <a href="">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
   </body>
 </html>
