--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="style.css">
     <title>Aragon Computer Lab</title>
   </head>
   <body>
@@ -58,9 +59,7 @@
           <div class="card-body">
             <h5 class="card-title">Computer Literacy</h5>
             <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
+              Basic computer operations. Historical and scientific exploration of computer hardware and software.
             </p>
           </div>
         </div>
@@ -70,7 +69,9 @@
           <img src="images/scratch-og.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Scratch</h5>
-            <p class="card-text">This is a short card.</p>
+            <p class="card-text">
+              <a href="">Scratch</a> is a web-based programming environment developed at MIT. The target audience is 8 to 16 year olds.
+            </p>
           </div>
         </div>
       </div>
@@ -80,8 +81,7 @@
           <div class="card-body">
             <h5 class="card-title">Python</h5>
             <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content.
+              <a href="">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything.
             </p>
           </div>
         </div>
