--- a/about.html
+++ b/about.html
@@ -52,15 +52,28 @@
       </div>
     </nav>
     <div class="container p-4">
-    <div class="card w-50">
-      <img src="images/me.jpeg" style="width: 300px""" class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Hello</h5>
-        <p class="card-text">
-          Hello, my name is Tyler Maxwell. I am the new computer guy(person, assistant...I am not sure what's correct). You can call me Tyler or Mr. M. I would love to start coding classes for our students as soon as possible.
-        </p>
-      </div>
-    </div>
+      <div class="card mb-3" style="max-width: 800px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="images/me.jpeg" class="card-img" alt="..." style="width: 200px; height: 200px;">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body m-2">
+              <h5 class="card-title">IA Computer Lab</h5>
+              <p class="card-text">My name is Tyler Maxwell and I will be your new computer lab assistant. I taught Secondary Social Science for about seven years. However, I have never worked with students below the 6th grade. I would love your feedback and suggestions about how to incorporate computer programming instruction into your curriculum. The last thing I want to be is a distraction.</p>
+
+              <p>My vision is to help students incorporate technology into what they are currently learning. Some of the ideas I have are:</p>
+              <ul>
+                <li>websites for history or ela projects</li>
+                <li>Python scripts to visualize mathematical concepts</li>
+                <li>Using Scratch for just about anything!</li>
+              </ul>
+
+              <p>Again, I have never worked with this age group, so feel free to add suggestions or reign me in if I am getting too far from reality.</p>
+
+            </div>
+          </div>
+        </div>
   </div>
 
   
@@ -83,7 +96,7 @@
             <div class="card-body">
               <h5 class="card-title">Scratch</h5>
               <p class="card-text">
-                <a href="">Scratch</a> is a web-based programming environment developed at MIT. The target audience is 8 to 16 year olds.
+                <a href="https://scratch.mit.edu/">Scratch</a> is a web-based programming environment developed at MIT. The target audience is 8 to 16 year olds.
               </p>
             </div>
           </div>
@@ -94,7 +107,7 @@
             <div class="card-body">
               <h5 class="card-title">Python</h5>
               <p class="card-text">
-                <a href="">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything.
+                <a href="https://www.python.org/">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything.
               </p>
             </div>
           </div>
