--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="card-body">
             <h5 class="card-title">Computer Literacy</h5>
             <p class="card-text">
-              Basic computer operations. Historical and scientific exploration of computer hardware and software.
+              Basic computer literacy in accordance with California content standards. Historical and scientific exploration of computer hardware and software.
             </p>
           </div>
         </div>
@@ -70,7 +70,7 @@
           <div class="card-body">
             <h5 class="card-title">Scratch</h5>
             <p class="card-text">
-              <a href="">Scratch</a> is a web-based programming environment developed at MIT. The target audience is 8 to 16 year olds.
+              <a href="https://scratch.mit.edu/">Scratch</a> is a web-based programming environment developed at MIT. The target ages are 8 to 16. However, Scratch Jr. is available for younger students.
             </p>
           </div>
         </div>
@@ -81,7 +81,7 @@
           <div class="card-body">
             <h5 class="card-title">Python</h5>
             <p class="card-text">
-              <a href="">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything.
+              <a href="https://www.python.org/">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything.
             </p>
           </div>
         </div>
