--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           <div class="col-md-8">
             <div class="card-body m-2">
               <h5 class="card-title">IA Computer Lab</h5>
-              <p class="card-text">My name is Tyler Maxwell and I will be your new computer lab assistant. I taught Secondary Social Science for about seven years. However, I have never worked with students below the 6th grade. I would love your feedback and suggestions about how to incorporate computer programming instruction into your curriculum. The last thing I want to be is a distraction. I would love to brainstorm Ideas about how to use the technology we have to its maximum benefit.</p>
+              <p class="card-text">My name is Tyler Maxwell and I will be your new computer lab assistant. I taught Secondary Social Science for about seven years. However, I have never worked with students younger than the 6th grade. I would love your feedback and suggestions about how to incorporate computer programming instruction into your curriculum. The last thing I want to be is a distraction. I would love to brainstorm Ideas about how to use the technology we have to its maximum benefit.</p>
 
               <p>My vision is to help students incorporate technology into what they are currently learning. Some of the ideas I have are:</p>
               <ul>
