update with hoc and about

--- a/about.html
+++ b/about.html
@@ -71,6 +71,9 @@
 
               <p>Again, I have never worked with this age group, so feel free to add suggestions or reign me in if I am getting too far from reality.</p>
 
+              <h2>TL;DR</h2>
+              <p>The big bald guy is the new computer lab assistant. He has some middle/high school teaching experience, but he needs help working with the little ones!</p>
+
             </div>
           </div>
         </div>
@@ -78,41 +81,7 @@
 
   
     <div class="container">
-      <div class="row row-cols-1 row-cols-md-3 g-5 p-4">
-        <div class="col">
-          <div class="card h-100">
-            <img src="images/home.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Computer Literacy</h5>
-              <p class="card-text">
-                Basic computer operations. Historical and scientific exploration of computer hardware and software.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="images/scratch-og.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Scratch</h5>
-              <p class="card-text">
-                <a href="https://scratch.mit.edu/">Scratch</a> is a web-based programming environment developed at MIT. The target audience is 8 to 16 year olds.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="images/python.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Python</h5>
-              <p class="card-text">
-                <a href="https://www.python.org/">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      
   </div>
   </body>
 </html>
