--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">AAE Computer Lab</a>
+        <a class="navbar-brand " href="/">AAE Computer Lab</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -52,14 +52,25 @@
       </div>
     </nav>
 
-    <div class="row row-cols-1 row-cols-md-3 g-5 p-4">
+    <div class="row row-cols-1 row-cols-md-4 g-5 p-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/hoc.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Hour of Code</h5>
+            <p class="card-text">
+              I think <a href="https://hourofcode.com/us">Hour of Code</a> is the ideal place to start. The quantity of resources available on this site is amazing. It starts at the very beginning with rudimentary programming skills and moves in a progressive manner with built-in scaffolding. 
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="col">
         <div class="card h-100">
           <img src="images/home.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Computer Literacy</h5>
             <p class="card-text">
-              Basic computer literacy in accordance with California content standards. Historical and scientific exploration of computer hardware and software.
+              Basic computer literacy, with an emphasis on safe and effective use of technology, in accordance with <a href="https://www.cde.ca.gov/be/st/ss/compsciguidelines.asp">California content standards</a>. Historical and scientific exploration of computer hardware and software.
             </p>
           </div>
         </div>
@@ -81,11 +92,12 @@
           <div class="card-body">
             <h5 class="card-title">Python</h5>
             <p class="card-text">
-              <a href="https://www.python.org/">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything.
+              <a href="https://www.python.org/">Python</a> is one of the most popular programming languages on the planet. It is relatively easy to learn and has applications in just about everything. Personal confession: I am in love with Python!
             </p>
           </div>
         </div>
       </div>
+      
     </div>
   </body>
 </html>
