--- a/schedule.html
+++ b/schedule.html
@@ -65,5 +65,46 @@
       data-url="https://calendly.com/aragon-computer-lab/coding-instruction"
       style="min-width: 300px; height: 700px"
     ></div>
+
+    <div class="container">
+      <h2>Computer Lab Schedule</h2>
+    <table class="table table-bordered table-striped table-dark table-sm">
+      <thead>
+        <tr>
+          <th scope="col">Session</th>
+          <th scope="col">Monday</th>
+          <th scope="col">Tuesday</th>
+          <th scope="col">Wednesday</th>
+          <th scope="col">Thursday</th>
+          <th scope="col">Friday</th>
+
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">First Session</th>
+          <td>OPEN</td>
+          <td>OPEN</td>
+          <td>OPEN</td>
+          <td>OPEN</td>
+          <td>OPEN</td>
+
+         
+       
+        </tr>
+        <tr>
+          <th scope="row">Second Session</th>
+          <td>OPEN</td>
+          <td>OPEN</td>
+          <td>OPEN</td>
+          <td>OPEN</td>
+          <td>OPEN</td>
+
+        </tr>
+      </tbody>
+    </table> 
+  </div>
+
+
   </body>
 </html>
