--- a/schedule.html
+++ b/schedule.html
@@ -84,14 +84,14 @@
             <th scope="row">First Session</th>
             <td>OPEN</td>
             <td>OPEN</td>
-            <td>OPEN</td>
+            <td>CHONG</td>
             <td>OPEN</td>
             <td>OPEN</td>
           </tr>
           <tr>
             <th scope="row">Second Session</th>
             <td>LOPEZ</td>
-            <td>OPEN</td>
+            <td>OCHOA</td>
             <td>GUEVARA</td>
             <td>OPEN</td>
             <td>NAVARRO</td>
