--- a/schedule.html
+++ b/schedule.html
@@ -82,15 +82,15 @@
         <tbody>
           <tr>
             <th scope="row">First Session</th>
-            <td>OPEN</td>
+            <td>ACEVES</td>
             <td>OPEN</td>
             <td>CHONG</td>
-            <td>OPEN</td>
+            <td>LOPEZ J.</td>
             <td>OPEN</td>
           </tr>
           <tr>
             <th scope="row">Second Session</th>
-            <td>LOPEZ</td>
+            <td>LOPEZ D.</td>
             <td>OCHOA</td>
             <td>GUEVARA</td>
             <td>OPEN</td>
