--- a/schedule.html
+++ b/schedule.html
@@ -78,7 +78,7 @@
           <tr>
             <th scope="row">First Session</th>
             <td>OPEN</td>
-            <td>OPEN</td>
+            <td>CEA</td>
             <td>CHONG</td>
             <td>LOPEZ J.</td>
             <td>OPEN</td>
