--- a/schedule.html
+++ b/schedule.html
@@ -81,7 +81,7 @@
             <td>CEA</td>
             <td>CHONG</td>
             <td>LOPEZ J.</td>
-            <td>OPEN</td>
+            <td>DE HAVEN</td>
           </tr>
           <tr>
             <th scope="row">Second Session</th>
